# rust-quick-tests.nvim

./: .gitignore  .gitmodules  README.md  stylua.toml
example/: Cargo.toml
example/src/: foo.rs  lib.rs  main.rs
example/src/bar/: mod.rs
lua/rust-quick-tests/: command.lua  config.lua  dap.lua  find_rust_tests.lua  hover_actions.lua  init.lua  termopen.lua  treesitter.lua  types.lua  ui.lua
playground/: Cargo.toml
playground/examples/: foo.rs
playground/src/: main.rs  main_2.rs
playground/src/bar/: bim.rs
