[package]
name = "example"
version = "0.1.0"
edition = "2021"
lib = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_2"
path = "src/main_2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"

[features]
foo = []
